// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compress-generator/compress appends existing collections 1`] = `
Object {
  "dir": true,
  "fileContent": "",
  "relativePath": "sample-collection/",
}
`;

exports[`compress-generator/compress appends existing collections 2`] = `
Object {
  "dir": false,
  "fileContent": "{\\"description\\":\\"Sample Description\\",\\"name\\":\\"Sample Collection\\"}",
  "relativePath": "sample-collection/collection.json",
}
`;

exports[`compress-generator/compress appends existing fragments 1`] = `
Object {
  "dir": true,
  "fileContent": "",
  "relativePath": "sample-collection/",
}
`;

exports[`compress-generator/compress appends existing fragments 2`] = `
Object {
  "dir": true,
  "fileContent": "",
  "relativePath": "sample-collection/sample-fragment/",
}
`;

exports[`compress-generator/compress appends existing fragments 3`] = `
Object {
  "dir": false,
  "fileContent": "{\\"description\\":\\"Sample Description\\",\\"name\\":\\"Sample Collection\\"}",
  "relativePath": "sample-collection/collection.json",
}
`;

exports[`compress-generator/compress appends existing fragments 4`] = `
Object {
  "dir": false,
  "fileContent": "{\\"cssPath\\":\\"styles.css\\",\\"htmlPath\\":\\"index.html\\",\\"jsPath\\":\\"main.js\\",\\"name\\":\\"Sample Fragment\\"}",
  "relativePath": "sample-collection/sample-fragment/fragment.json",
}
`;

exports[`compress-generator/compress appends existing fragments 5`] = `
Object {
  "dir": false,
  "fileContent": "<div class=\\"sample-fragment\\">
  Sample Fragment
</div>
",
  "relativePath": "sample-collection/sample-fragment/index.html",
}
`;

exports[`compress-generator/compress appends existing fragments 6`] = `
Object {
  "dir": false,
  "fileContent": ".sample-fragment {
  color: inherit;
}
",
  "relativePath": "sample-collection/sample-fragment/styles.css",
}
`;

exports[`compress-generator/compress appends existing fragments 7`] = `
Object {
  "dir": false,
  "fileContent": "const content = fragmentElement.querySelector('.sample-fragment');
",
  "relativePath": "sample-collection/sample-fragment/main.js",
}
`;
